# sunglasses-discord-bot

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  docker-compose.example.yaml  docker-compose.yaml
assets/: breathing.opus
src/: main.rs
src/modules/: gust_abdalla.rs  mod.rs  sotd.rs
