[package]
name = "david-discord-bot-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
regex = "1.11.3"
chrono = "0.4.42"
tokio-cron-scheduler = "0.15.0"

# for the call part
#[dependencies.songbird]
#version = "0.5"
#features = ["builtin-queue"]